--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="black_12">#1F000000</color>
+    <color name="black_87">#DE000000</color>
+    <color name="emperor">#525252</color>
+    <color name="dusty_gray">#9B9B9B</color>
+    <color name="my_sin">#FFAD25</color>
+    <color name="orange_peel">#FF9F00</color>
+    <color name="orange_peel_12">#1FFF9F00</color>
+    <color name="jungle_green">#2A9D8F</color>
+    <color name="burnt_sienna">#EB5757</color>
 </resources>
