--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,10 @@
     <dimen name="space_8">8dp</dimen>
     <dimen name="space_13">13dp</dimen>
     <dimen name="space_16">16dp</dimen>
+    <dimen name="space_20">20dp</dimen>
     <dimen name="space_32">32dp</dimen>
     <dimen name="space_40">40dp</dimen>
+    <dimen name="space_175">175dp</dimen>
 
     <dimen name="text_14">14sp</dimen>
     <dimen name="text_16">16sp</dimen>
