--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
         <item name="fontFamily">@font/plus_jakarta_sans_400</item>
         <item name="android:textSize">@dimen/text_14</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="error_btn">
