ui for coin details fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="space_20">20dp</dimen>
     <dimen name="space_32">32dp</dimen>
     <dimen name="space_40">40dp</dimen>
+    <dimen name="space_90">90dp</dimen>
     <dimen name="space_175">175dp</dimen>
 
     <dimen name="text_14">14sp</dimen>
