--- a/app/src/main/res/layout/fragment_coins_list.xml
+++ b/app/src/main/res/layout/fragment_coins_list.xml
@@ -36,6 +36,7 @@
                 style="@style/currency_chip_regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="@string/usd"
                 app:chipMinTouchTargetSize="0dp"
                 app:textEndPadding="@dimen/space_20"
