--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,9 @@
         <item name="android:textColor">@color/black_87</item>
     </style>
 
-    <style name="currency_chip_regular">
+    <style name="currency_chip_regular" parent="@style/Widget.MaterialComponents.Chip.Choice">
         <item name="fontFamily">@font/roboto_400</item>
         <item name="android:textSize">@dimen/text_14</item>
-        <item name="android:textColor">@color/black_87</item>
         <item name="textAllCaps">true</item>
     </style>
 
