--- a/app/src/main/res/layout/fragment_coin_details.xml
+++ b/app/src/main/res/layout/fragment_coin_details.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/details_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
